--- a/index.html
+++ b/index.html
@@ -30,162 +30,162 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/fulls/32.jpg" class="image"><img src="images/thumbs/32.jpg" alt="" /></a>
+							<a href="images/fulls/32.JPG" class="image"><img src="images/thumbs/32.JPG" alt="" /></a>
 							<h2>Hills Road</h2>
 							<p>The Church of Our Lady and the English Martyrs, Cambridge.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/31.jpg" class="image"><img src="images/thumbs/31.jpg" alt="" /></a>
+							<a href="images/fulls/31.JPG" class="image"><img src="images/thumbs/31.JPG" alt="" /></a>
 							<h2>Yusuf Hamied Department of Chemistry</h2>
 							<p>Bike racks in a sunset, next to the BMS entrance.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/30.jpg" class="image"><img src="images/thumbs/30.jpg" alt="" /></a>
+							<a href="images/fulls/30.JPG" class="image"><img src="images/thumbs/30.JPG" alt="" /></a>
 							<h2>Yusuf Hamied Department of Chemistry</h2>
 							<p>The main building.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/29.jpg" class="image"><img src="images/thumbs/29.jpg" alt="" /></a>
+							<a href="images/fulls/29.JPG" class="image"><img src="images/thumbs/29.JPG" alt="" /></a>
 							<h2>Lensfield Road</h2>
 							<p>The Church of Our Lady and the English Martyrs, Cambridge.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/28.jpg" class="image"><img src="images/thumbs/28.jpg" alt="" /></a>
+							<a href="images/fulls/28.JPG" class="image"><img src="images/thumbs/28.JPG" alt="" /></a>
 							<h2>Trumpington Street</h2>
 							<p>Fitzwilliam Museum in a clear, sunny day.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/27.jpg" class="image"><img src="images/thumbs/27.jpg" alt="" /></a>
+							<a href="images/fulls/27.JPG" class="image"><img src="images/thumbs/27.JPG" alt="" /></a>
 							<h2>Corn Exchange</h2>
 							<p>A public entertainment site where I had several of my exams.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/26.jpg" class="image"><img src="images/thumbs/26.jpg" alt="" /></a>
+							<a href="images/fulls/26.JPG" class="image"><img src="images/thumbs/26.JPG" alt="" /></a>
 							<h2>Market Square</h2>
 							<p>From the top of Great St Mary's, the University Church, with someone who brought a pair of fancy binoculars with him.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/25.jpg" class="image"><img src="images/thumbs/25.jpg" alt="" /></a>
+							<a href="images/fulls/25.JPG" class="image"><img src="images/thumbs/25.JPG" alt="" /></a>
 							<h2>Rose Crescent</h2>
 							<p>A busy street full of shops, with an unmatched, poetic name.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/24.jpg" class="image"><img src="images/thumbs/24.jpg" alt="" /></a>
+							<a href="images/fulls/24.JPG" class="image"><img src="images/thumbs/24.JPG" alt="" /></a>
 							<h2>CUP Bookshop</h2>
 							<p>They have got a whole stand of cool scientific greeting cards and postcards there!</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/23.jpg" class="image"><img src="images/thumbs/23.jpg" alt="" /></a>
+							<a href="images/fulls/23.JPG" class="image"><img src="images/thumbs/23.JPG" alt="" /></a>
 							<h2>Garret Hostel Bridge</h2>
 							<p>AKA The Orgasm Bridge (⌒▽⌒)</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/22.jpg" class="image"><img src="images/thumbs/22.jpg" alt="" /></a>
+							<a href="images/fulls/22.JPG" class="image"><img src="images/thumbs/22.JPG" alt="" /></a>
 							<h2>Burrell's Field</h2>
 							<p>The scene that I saw when I was mindlessly staring at the treetops and feeling anxious before a statistical mechanics supervision.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/21.jpg" class="image"><img src="images/thumbs/21.jpg" alt="" /></a>
+							<a href="images/fulls/21.JPG" class="image"><img src="images/thumbs/21.JPG" alt="" /></a>
 							<h2>Castle Mound</h2>
 							<p>Allegedly the highest 'mountain' in Cambridge.</p>
 					</article>
 					<article class="thumb">
-							<a href="images/fulls/20.jpg" class="image"><img src="images/thumbs/20.jpg" alt="" /></a>
+							<a href="images/fulls/20.JPG" class="image"><img src="images/thumbs/20.JPG" alt="" /></a>
 							<h2>Castle Street</h2>
 							<p>On the way to Castle Mound; the waiting time of traffic lights here is surprisingly long.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/19.jpg" class="image"><img src="images/thumbs/19.jpg" alt="" /></a>
+							<a href="images/fulls/19.JPG" class="image"><img src="images/thumbs/19.JPG" alt="" /></a>
 							<h2>Magdalene Bridge</h2>
 							<p>There will possibly be punters advertising their punting trips to you.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/18.jpg" class="image"><img src="images/thumbs/18.jpg" alt="" /></a>
+							<a href="images/fulls/18.JPG" class="image"><img src="images/thumbs/18.JPG" alt="" /></a>
 							<h2>Jesus Lock Footbridge</h2>
 							<p>I drew this right after my last exam.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/17.jpg" class="image"><img src="images/thumbs/17.jpg" alt="" /></a>
+							<a href="images/fulls/17.JPG" class="image"><img src="images/thumbs/17.JPG" alt="" /></a>
 							<h2>Assorted pressed flower bookmarks</h2>
 							<p>They were sourced (or 'stolen') from Trinity College and Botanic Garden, and pressed using old books sourced (or again, 'stolen') from the college library.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/16.jpg" class="image"><img src="images/thumbs/16.jpg" alt="" /></a>
+							<a href="images/fulls/16.JPG" class="image"><img src="images/thumbs/16.JPG" alt="" /></a>
 							<h2>Origami Robin</h2>
 							<p>One of my (not very successful) origami attempts, dedicated to a small orange bird who routinely visited me (uninvitedly) during Michaelmas and Lent, 2023.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/15.jpg" class="image"><img src="images/thumbs/15.jpg" alt="" /></a>
+							<a href="images/fulls/15.JPG" class="image"><img src="images/thumbs/15.JPG" alt="" /></a>
 							<h2>Random illustrations of Marjoram</h2>
 							<p>I suppose at that moment I was particularly interested in different herbs...</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/14.jpg" class="image"><img src="images/thumbs/14.jpg" alt="" /></a>
+							<a href="images/fulls/14.JPG" class="image"><img src="images/thumbs/14.JPG" alt="" /></a>
 							<h2>Starry Night</h2>
 							<p>(Adapted from Pinterest images)</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/13.jpg" class="image"><img src="images/thumbs/13.jpg" alt="" /></a>
+							<a href="images/fulls/13.JPG" class="image"><img src="images/thumbs/13.JPG" alt="" /></a>
 							<h2>A Coastal Scene</h2>
 							<p>(Adapted from Pinterest images)</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
+							<a href="images/fulls/12.JPG" class="image"><img src="images/thumbs/12.JPG" alt="" /></a>
 							<h2>House with a red roof</h2>
 							<p>(Adapted from Pinterest images)</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt="" /></a>
+							<a href="images/fulls/11.JPG" class="image"><img src="images/thumbs/11.JPG" alt="" /></a>
 							<h2>Village Path</h2>
 							<p>(Adapted from Pinterest images)</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" /></a>
+							<a href="images/fulls/10.JPG" class="image"><img src="images/thumbs/10.JPG" alt="" /></a>
 							<h2>A collection of mixed-media experiments</h2>
 							<p>(Adapted from Pinterest images)</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/9.jpg" class="image"><img src="images/thumbs/9.jpg" alt="" /></a>
+							<a href="images/fulls/9.JPG" class="image"><img src="images/thumbs/9.JPG" alt="" /></a>
 							<h2>A collection of earlier urban sketching practices</h2>
 							<p></p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/8.jpg" class="image"><img src="images/thumbs/8.jpg" alt="" /></a>
+							<a href="images/fulls/8.JPG" class="image"><img src="images/thumbs/8.JPG" alt="" /></a>
 							<h2>Yusuf Hamied Department of Chemistry</h2>
 							<p>The turquoise roof looks both very industrial (~ ugly) and oddly aesthetic to me.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/7.jpg" class="image"><img src="images/thumbs/7.jpg" alt="" /></a>
+							<a href="images/fulls/7.JPG" class="image"><img src="images/thumbs/7.JPG" alt="" /></a>
 							<h2>A collection of earlier urban sketching practices</h2>
 							<p>We call it - department of chemistry!</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/6.jpg" class="image"><img src="images/thumbs/6.jpg" alt="" /></a>
+							<a href="images/fulls/6.JPG" class="image"><img src="images/thumbs/6.JPG" alt="" /></a>
 							<h2>Green Street</h2>
 							<p>With festive banners under the sun.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/5.jpg" class="image"><img src="images/thumbs/5.jpg" alt="" /></a>
+							<a href="images/fulls/5.JPG" class="image"><img src="images/thumbs/5.JPG" alt="" /></a>
 							<h2>Great Gate Lawn</h2>
 							<p>Featuring 'Newton's Apple Tree' (am I intentionally disclosing a WiFi password?); a pretty common meeting spot.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/4.jpg" class="image"><img src="images/thumbs/4.jpg" alt="" /></a>
+							<a href="images/fulls/4.JPG" class="image"><img src="images/thumbs/4.JPG" alt="" /></a>
 							<h2>Queen's Road</h2>
 							<p>In an autumn afternoon.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/3.jpg" class="image"><img src="images/thumbs/3.jpg" alt="" /></a>
+							<a href="images/fulls/3.JPG" class="image"><img src="images/thumbs/3.JPG" alt="" /></a>
 							<h2>All Saint's Garden</h2>
 							<p>There is several cherry blossom trees and a tiny art fair every Saturday.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/2.jpg" class="image"><img src="images/thumbs/2.jpg" alt="" /></a>
+							<a href="images/fulls/2.JPG" class="image"><img src="images/thumbs/2.JPG" alt="" /></a>
 							<h2>River Cam</h2>
 							<p></p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/1.jpg" class="image"><img src="images/thumbs/1.jpg" alt="" /></a>
+							<a href="images/fulls/1.JPG" class="image"><img src="images/thumbs/1.JPG" alt="" /></a>
 							<h2>A collection of earlier urban sketching practices</h2>
 							<p></p>
 						</article>
