--- a/index.html
+++ b/index.html
@@ -30,19 +30,6 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-<<<<<<< Updated upstream
-=======
-							<a href="images/fulls/34.JPG" class="image"><img src="images/thumbs/34.JPG" alt="" /></a>
-							<h2>The Fountain in the Great Court</h2>
-							<p></p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/33.JPG" class="image"><img src="images/thumbs/33.JPG" alt="" /></a>
-							<h2>The Fountain in the Great Court</h2>
-							<p></p>
-						</article>
-						<article class="thumb">
->>>>>>> Stashed changes
 							<a href="images/fulls/32.JPG" class="image"><img src="images/thumbs/32.JPG" alt="" /></a>
 							<h2>Hills Road</h2>
 							<p>The Church of Our Lady and the English Martyrs, Cambridge.</p>
@@ -230,7 +217,7 @@
 							<div>
 								<section>
 									<h2>Get in touch</h2>
-									<form method="post" action="#">
+									<form method="POST" action="https://formspree.io/f/mdovqeye">
 										<div class="fields">
 											<div class="field half">
 												<input type="text" name="name" id="name" placeholder="Name" />
