Update, the fountain

--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
+							<a href="images/fulls/33.JPG" class="image"><img src="images/thumbs/33.JPG" alt="" /></a>
+							<h2>The Fountain</h2>
+							<p>Great Court, Trinity College</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/34.JPG" class="image"><img src="images/thumbs/34.JPG" alt="" /></a>
+							<h2>The Fountain</h2>
+							<p>Great Court, Trinity College</p>
+						</article>
+						<article class="thumb">
 							<a href="images/fulls/32.JPG" class="image"><img src="images/thumbs/32.JPG" alt="" /></a>
 							<h2>Hills Road</h2>
 							<p>The Church of Our Lady and the English Martyrs, Cambridge.</p>
