--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 						<article class="thumb">
 							<a href="images/fulls/3.JPG" class="image"><img src="images/thumbs/3.JPG" alt="" /></a>
 							<h2>All Saint's Garden</h2>
-							<p>There is several cherry blossom trees and a tiny art fair every Saturday.</p>
+							<p>There are several cherry blossom trees and a tiny art fair every Saturday.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/2.JPG" class="image"><img src="images/thumbs/2.JPG" alt="" /></a>
