Update Christmas cards

--- a/index.html
+++ b/index.html
@@ -199,6 +199,16 @@
 							<h2>A collection of earlier urban sketching practices</h2>
 							<p></p>
 						</article>
+						<article class="thumb">
+							<a href="images/fulls/0.JPG" class="image"><img src="images/thumbs/0.JPG" alt="" /></a>
+							<h2>Christmas cards 2022</h2>
+							<p>To our 'beloved supervisors', featuring squirrels and squashes</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/1.JPG" class="image"><img src="images/thumbs/1.JPG" alt="" /></a>
+							<h2>Christmas cards 2022</h2>
+							<p>To my friends!</p>
+						</article>
 					</div>
 
 				<!-- Footer -->
