--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
+							<a href="images/fulls/35.JPG" class="image"><img src="images/thumbs/35.JPG" alt="" /></a>
+							<h2>Magdalene Street</h2>
+							<p>Going along the Magdalene Street, heading to the hill</p>
+						</article>
+						<article class="thumb">
 							<a href="images/fulls/33.JPG" class="image"><img src="images/thumbs/33.JPG" alt="" /></a>
 							<h2>The Fountain</h2>
 							<p>Great Court, Trinity College</p>
