--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
+							<a href="images/fulls/38.JPG" class="image"><img src="images/thumbs/38.JPG" alt="" /></a>
+							<h2>After Frances Ives - A Copy of 'To the Maypole'</h2>
+							<p>A local illustrator in Cambridge with very expressive mixed-media artworks! I ran into this amazing piece in the window of Cambridge Contemporary Art.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/37.JPG" class="image"><img src="images/thumbs/37.JPG" alt="" /></a>
+							<h2>The ante-chapel, Trinity College</h2>
+							<p>Newton's statue in the ante-chapel, where people gather when fire alarms go off.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/36.JPG" class="image"><img src="images/thumbs/36.JPG" alt="" /></a>
+							<h2>Yusuf Hamied Department of Chemistry</h2>
+							<p>Well, I have no idea where I can get such perfect view; instead, google map offered me the chance.</p>
+						</article>
+						<article class="thumb">
 							<a href="images/fulls/35.JPG" class="image"><img src="images/thumbs/35.JPG" alt="" /></a>
 							<h2>Magdalene Street</h2>
 							<p>Going along the Magdalene Street, heading to the hill</p>
