--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
+							<a href="images/fulls/39.JPG" class="image"><img src="images/thumbs/39.JPG" alt="" /></a>
+							<h2>Reality Checkpoint, Parker's Piece</h2>
+							<p>There are several tales of why it got its name. There is a miniature door at its base. There was a time before sunset, when I walked with a friend who was wondering if you could cross each edge of the square with equal frenquency.</p>
+						</article>
+						<article class="thumb">
 							<a href="images/fulls/38.JPG" class="image"><img src="images/thumbs/38.JPG" alt="" /></a>
 							<h2>After Frances Ives - A Copy of 'To the Maypole'</h2>
 							<p>A local illustrator in Cambridge with very expressive mixed-media artworks! I ran into this amazing piece in the window of Cambridge Contemporary Art.</p>
