--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
+							<a href="images/fulls/40.JPG" class="image"><img src="images/thumbs/40.JPG" alt="" /></a>
+							<h2>Bene't Street</h2>
+							<p>A busy street with many pubs and Jack's gelato, as well as a tourist attraction which had been shut down for a while but lately reopened.</p>
+						</article>
+						<article class="thumb">
 							<a href="images/fulls/39.JPG" class="image"><img src="images/thumbs/39.JPG" alt="" /></a>
 							<h2>Reality Checkpoint, Parker's Piece</h2>
 							<p>There are several tales of why it got its name. There is a miniature door at its base. There was a time before sunset, when I walked with a friend who was wondering if you could cross each edge of the square with equal frenquency.</p>
