--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
+							<a href="images/fulls/42.JPG" class="image"><img src="images/thumbs/42.JPG" alt="" /></a>
+							<h2>Memorial Court</h2>
+							<p>Looking at the Memorial Court on a road with ugly palm trees standing beside you.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/41.JPG" class="image"><img src="images/thumbs/41.JPG" alt="" /></a>
+							<h2>Wallenberg Hall</h2>
+							<p>Just some signature view, but not something with a particular personal attachment.</p>
+						</article>
+						<article class="thumb">
 							<a href="images/fulls/40.JPG" class="image"><img src="images/thumbs/40.JPG" alt="" /></a>
 							<h2>Bene't Street</h2>
 							<p>A busy street with many pubs and Jack's gelato, as well as a tourist attraction which had been shut down for a while but lately reopened.</p>
