--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
+							<a href="images/fulls/45.JPG" class="image"><img src="images/thumbs/45.JPG" alt="" /></a>
+							<h2>Stanford Dish</h2>
+							<p>I've heard that it is a great hiking trail.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/44.JPG" class="image"><img src="images/thumbs/44.JPG" alt="" /></a>
+							<h2>Arizona Garden</h2>
+							<p>Possibly analogous to a small botanic garden - somewhere to visit.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/43.JPG" class="image"><img src="images/thumbs/43.JPG" alt="" /></a>
+							<h2>Main Quad</h2>
+							<p>Very tropical, normally full of sunshine and a ridiculously large number of ugly palm trees.</p>
+						</article>
+						<article class="thumb">
 							<a href="images/fulls/42.JPG" class="image"><img src="images/thumbs/42.JPG" alt="" /></a>
 							<h2>Memorial Court</h2>
 							<p>Looking at the Memorial Court on a road with ugly palm trees standing beside you.</p>
