--- a/index.html
+++ b/index.html
@@ -30,6 +30,36 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
+							<a href="images/fulls/51.JPG" class="image"><img src="images/thumbs/51.JPG" alt="" /></a>
+							<h2>Stanford Dish Hiking Trail</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/50.JPG" class="image"><img src="images/thumbs/50.JPG" alt="" /></a>
+							<h2>A random sunset</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/49.JPG" class="image"><img src="images/thumbs/49.JPG" alt="" /></a>
+							<h2>Trinity Street</h2>
+							<p>A recurring subject of dreams lately</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/48.JPG" class="image"><img src="images/thumbs/48.JPG" alt="" /></a>
+							<h2>Memorial Church</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/47.JPG" class="image"><img src="images/thumbs/47.JPG" alt="" /></a>
+							<h2></h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/46.JPG" class="image"><img src="images/thumbs/46.JPG" alt="" /></a>
+							<h2>Fountain in front of the Hoover Tower</h2>
+							<p>I sent this postcard to home although it is likely to have been already lost along its journey...</p>
+						</article>
+						<article class="thumb">
 							<a href="images/fulls/45.JPG" class="image"><img src="images/thumbs/45.JPG" alt="" /></a>
 							<h2>Stanford Dish</h2>
 							<p>I've heard that it is a great hiking trail.</p>
