--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
+							<a href="images/fulls/52.JPG" class="image"><img src="images/thumbs/52.JPG" alt="" /></a>
+							<h2>Cold Spring Harbour Laboratory</h2>
+							<p>A research institute that has rejected my summer intern application quite a while ago (and a birthday card to someone whom I have known for more than 18 years)!</p>
+						</article>
+						<article class="thumb">
 							<a href="images/fulls/51.JPG" class="image"><img src="images/thumbs/51.JPG" alt="" /></a>
 							<h2>Stanford Dish Hiking Trail</h2>
 							<p></p>
