--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
+							<a href="images/fulls/55.JPG" class="image"><img src="images/thumbs/55.JPG" alt="" /></a>
+							<h2>Rodin Sculpture Gardin (and more palm trees)</h2>
+							<p>On one side of Keck Science Building and next to the Cantor Art Centre.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/54.JPG" class="image"><img src="images/thumbs/54.JPG" alt="" /></a>
+							<h2>Assorted bookmarks</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/53.JPG" class="image"><img src="images/thumbs/53.JPG" alt="" /></a>
+							<h2>Assorted bookmarks</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
 							<a href="images/fulls/52.JPG" class="image"><img src="images/thumbs/52.JPG" alt="" /></a>
 							<h2>Cold Spring Harbour Laboratory</h2>
 							<p>A research institute that has rejected my summer intern application quite a while ago (and a birthday card to someone whom I have known for more than 18 years)!</p>
