--- a/index.html
+++ b/index.html
@@ -31,6 +31,26 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
+						<article class="thumb">
+							<a href="images/fulls/59.JPG" class="image"><img src="images/thumbs/53.JPG" alt="" /></a>
+							<h2>United Methodist Church at UNC</h2>
+							<p>One of the very few (but random) takeaways from a recent conference</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/58.JPG" class="image"><img src="images/thumbs/53.JPG" alt="" /></a>
+							<h2>Sampler platter at a lobster restaurant</h2>
+							<p>Near SFO; I'd say the shrimps and the chowder were really good.</p>
+						</article>
+							<a href="images/fulls/57.JPG" class="image"><img src="images/thumbs/53.JPG" alt="" /></a>
+							<h2>Assorted bookmarks with dry flowers</h2>
+							<p>Collected from the campus</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/56.JPG" class="image"><img src="images/thumbs/53.JPG" alt="" /></a>
+							<h2>An old doodle back in 2022...</h2>
+							<p>Meet Coffee (the tabby ginger) and Frothed Milk (the cotton-candy-like white)!</p>
+						</article>
+						<article class="thumb">
 							<a href="images/fulls/53.JPG" class="image"><img src="images/thumbs/53.JPG" alt="" /></a>
 							<h2>Rodin Sculpture Gardin (and more palm trees)</h2>
 							<p>On one side of Keck Science Building and next to the Cantor Art Centre.</p>
