--- a/index.html
+++ b/index.html
@@ -351,9 +351,15 @@
 <!--										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
-										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-<!--										<li><a href="https://github.com/rywang42" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+										<li><a href="https://github.com/rywang42" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+<!--										<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
 										<li><a href="https://www.linkedin.com/in/ruiyan-wang-4b05371a8/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li>
+											<a href="https://www.redbubble.com/people/rywang42/shop?asc=u">
+												<!-- <img src="images/thumbs/redbubble-icon.png" alt="Redbubble"> -->
+												<span class="label">Redbubble Shop</span>
+											</a>
+										</li>
 									</ul>
 								</section>
 								<p class="copyright">
