--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
+							<a href="images/fulls/60.JPG" class="image"><img src="images/thumbs/60.JPG" alt="" /></a>
+							<h2>The Main Quad</h2>
+							<p>Another random but signature scene at Stanford. And Melisa has been a wonderful mentor and office mate! (´；ω；｀)</p>
+						</article>
+						<article class="thumb">
 							<a href="images/fulls/59.JPG" class="image"><img src="images/thumbs/59.JPG" alt="" /></a>
 							<h2>United Methodist Church at UNC</h2>
 							<p>One of the very few (but random) takeaways from a recent conference</p>
